# podaac-airflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  VERSION  requirements.txt
.github/workflows/: .release-created.yml  build.yml  docker-publish.yml
.specify/memory/: constitution.md
docker/: Dockerfile  dockerfile_build_test.sh  dockerfile_test.sh
docker/dags/: cloud_optimize_gen.py  cloud_optimize_gen_cold.py  cloud_optimize_gen_fix_cold_start.py  eddy-inference-dag.py  eddy-process-dag.py  print_env_dag.py  sprint_demo.py  step_function_input.py  swot_confluence_stepfunction_dag.py  vds_bucket_sync_dag.py
docker/plugins/reports_plugin/: report.py  reports_plugin.py
my_project/: pyproject.toml
plugins/report_plugin/: report_plugin.py
plugins/report_plugin/templates/: report_page.html
plugins/reports_plugin/: report.py  reports_plugin.py
plugins/reports_plugin/templates/: reports_page.html
podaac-airflow/: pyproject.toml
specs/001-id-like-to/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-s3copy-task/: plan.md  research.md  spec.md  tasks.md
specs/001-s3copy-task/contracts/: s3_copy_operator_interface.py
terraform/: .terraform.lock.hcl  README.md  airflow_values.yaml  airflow_values.yaml.backup  data.tf  locals.tf  main.tf  outputs.tf  outputs.yaml  provider.tf  variables.tf  versions.tf
terraform-karpenter/: data.tf  locals.tf  main.tf
terraform-karpenter/tfvars/: ops.backend  ops.tfvars  sit.backend  sit.tfvars  uat.backend  uat.tfvars
terraform/modules/terraform-unity-sps-airflow/: README.md  data.tf  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/terraform-unity-sps-database/: data.tf  locals.tf  main.tf  (+1 more)
terraform/tfvars/: ops.backend  ops.tfvars  out.vars  sit.backend  sit.tfvars  uat.backend  uat.tfvars
(+16 files in other folders)
