[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Simon Liu <simon.liu@jpl.nasa.gov>"]
readme = "README.md"
packages = [{include = "my_project"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
asf-search = "^11.0.2"
earthaccess = "^0.16.0"
apache-airflow-providers-amazon = "9.10.0"
aiobotocore = {extras = ["awscli", "boto3"], version = "^3.1.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
