[tool.poetry]
name = "podaac-airflow"
version = "0.1.0"
description = ""
authors = ["Simon Liu <simon.liu@jpl.nasa.gov>"]
readme = "README.md"
packages = [{include = "podaac-airflow"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
asf-search = "^11.0.2"
earthaccess = "^0.16.0"
apache-airflow-providers-amazon = "9.10.0"
aiobotocore = {extras = ["awscli", "boto3"], version = "2.22.0"}
apache-airflow = "2.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
